2024-08-03  Omar Polo  <op@omarpolo.com>

	* add support for the proxy-protocol v1 in outgoing connections too;
	needs to be enabled with the new `proxy-v1' flag in a `proxy' block.
	* gg.c (parse_proxy): support IPv6 addresses in -P

2024-06-17  Christoph Liebender  <cristoph.liebender@posteo.de>

	* add support for the proxy-protocol v1 on incoming connection;
	needs to be enabled with the new `proxy-v1' flag for `listen'.

2024-06-17  Omar Polo  <op@omarpolo.com>

	* titan.c (open_input_file): improve error checking; errors like
	"no space left on device" would have been hidden otherwise.

2024-06-14  Omar Polo  <op@omarpolo.com>

	* gmid.c: correctly propagate the prefork value; was causing
	failures if the `prefork' setting was changed from the default.

2024-06-12  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): fix typo in a bounds check resulting in
	"chroot path too long" on some systems.

2024-06-11  Omar Polo  <op@omarpolo.com>

	* configure (VERSION): release 2.0.5

2024-06-10  Omar Polo  <op@omarpolo.com>

	* don't error on a '..' component at the start of the path
	* reject NUL bytes embedded in the request

2024-06-09  Omar Polo  <op@omarpolo.com>

	* check for truncation various strlcpy calls.
	* clean up of a few unused prototypes and externs.

2024-06-08  Omar Polo  <op@omarpolo.com>

	* configure: change how strnvis(3) is handled: on systems
	with the broken interface gmid will just use its built-in
	version.

2024-06-06  Omar Polo  <op@omarpolo.com>

	* parse.y: allow again empty lines at the start of the config
	* configure (VERSION): release 2.0.4
	* portability fix for system with a wrong strnvis(3)

2024-06-05  Omar Polo  <op@omarpolo.com>

	* parse.y: add a nicer error message if the removed `cgi' option
	is still used.

2024-06-04  Omar Polo  <op@omarpolo.com>

	* configure (VERSION): release 2.0.3

2024-06-03  Omar Polo  <op@omarpolo.com>

	* server.c (vhost_fastcgi): fix `fastcgi off' handling.
	Reported by Alex // nytpu
