@@ -21,8 +21,8 @@ REPOLOGY_URL =		https://repology.org/project/gmid/versions
 
 SUBST =		./subst GITHUB=https://github.com/omar-polo/gmid \
 			SITE=https://ftp.omarpolo.com \
-			VERS=2.0.5 \
-			PUBKEY=gmid-2.0.pub \
+			VERS=2.1 \
+			PUBKEY=gmid-2.1.pub \
 			TREE=https://github.com/omar-polo/gmid/blob/master
 
 SUBST_GEM =	${SUBST} MANEXT=txt  EXT=gmi  REPOLOGY=${REPOLOGY_URL}
